data/derived/comb/progs/unify/prog8705.ml.out
Characters 95-120:
  then matchHeads (t)(getTail y);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         unit
